fix: center alignment

--- a/src/App/MainPage/cards/NextHoursCard/style.module.css
+++ b/src/App/MainPage/cards/NextHoursCard/style.module.css
@@ -1,7 +1,7 @@
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     border-radius: 16px;
     padding: 20px;
